# mini-things

./: readme.md
Core/cute_charts/: Cargo.toml
Core/cute_charts/src/: lib.rs
Core/cute_charts/src/charts/: bar.rs  mod.rs
Core/dither/: Cargo.toml  ai-sugguestion.md  image-manipulation.rs
Core/pomodoro/: Cargo.toml  ai-sugguestion.md
Core/pomodoro/src/: lib.rs
Core/wordle/src/: lib.rs  words.txt
Core/wordle/src/game/: board.rs  letter_state.rs  mod.rs  words.rs
Lib/TUI/: Cargo.toml
Lib/TUI/src/: lib.rs  print.rs  scene.rs  window.rs
Lib/core/: Cargo.toml
Lib/core/src/: csv.rs  file.rs  lib.rs  scene.rs
TUI/mini_wordle/: Cargo.toml
TUI/mini_wordle/src/: board.rs  main.rs
TUI/mini_wordle/src/scenes/: game.rs  mod.rs
TUI/test_reflex/: Cargo.toml
TUI/test_reflex/src/: main.rs
Web/web_test/: Cargo.toml
Web/web_test/src/: main.rs
