[package]
name = "mini_wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
TUI = { version = "0.1.0", path = "../../Lib/TUI" }
mini_core = { version = "0.1.0", path = "../../Lib/core" }
wordle = { version = "0.1.0", path = "../../Core/wordle" }
